--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
-fastapi
-uvicorn
-sqlalchemy
-pyodbc
-python-decouple
+fastapi>=0.95.0
+uvicorn>=0.21.1
+sqlalchemy>=2.0.0
+jinja2>=3.1.2
+python-multipart>=0.0.6
+qrcode>=7.4.2
+pillow>=9.5.0
+pyodbc>=4.0.39
