--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 fastapi>=0.95.0
 uvicorn>=0.21.1
 sqlalchemy>=2.0.0
+psycopg2-binary>=2.9.5  # Add this for PostgreSQL
 jinja2>=3.1.2
 python-multipart>=0.0.6
 qrcode>=7.4.2
 pillow>=9.5.0
-pyodbc>=4.0.39
